i18n = import('i18n')


i18n.gettext('audacious-plugins',
  args: [
    '--default-domain=audacious-plugins',
    '--language=C',
    '--keyword=_',
    '--keyword=N_',
    '--from-code=UTF-8',
    '--msgid-bugs-address="https://redmine.audacious-media-player.org/"',
    '--directory=%0%'.format(meson.current_source_dir()),
    '--files-from=POTFILES.in'
  ]
)
